--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "highlightjs": "^9.10.0",
     "jquery": "^3.3.1",
     "markdown-it": "^8.4.0",
+    "moment": "^2.21.0",
     "nuxt": "^1.0.0",
     "source-map-support": "^0.4.15"
   },
