--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "highlightjs": "^9.10.0",
     "jquery": "^3.3.1",
     "markdown-it": "^8.4.0",
+    "mini-toastr": "^0.7.2",
     "moment": "^2.21.0",
     "nuxt": "^1.0.0",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "vue-notifications": "^0.9.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
