--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "product": "npm run build && npm run start"
   },
   "dependencies": {
     "axios": "^0.16.2",
