--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "backpack-core": "^0.4.1",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.8",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
@@ -42,6 +43,7 @@
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "velocity-animate": "^1.5.1"
   }
 }
